--- a/assets/home.css
+++ b/assets/home.css
@@ -11,6 +11,8 @@ body {
   background-color: var(--bg-color);
   font-family: 'Inter', sans-serif;
   margin: 0;
+  color: var(--text-main);
+  padding-bottom: 100px; /* Evita que o conteúdo suma atrás da navbar */
 }
 
 /* --- Cabeçalho --- */
